# ATCG2-Exercise-G08

./: .gitmodules  CMakeLists.txt  README.md
data/: cone_open_cut.off  maxear.off
include/: lib_least_squares_conformal_maps.h  lib_parameterization.h
lib/: lib_utils.cpp  lib_utils.h
src/: lib_least_squares_conformal_maps.cpp  lib_parameterization.cpp  main.cpp
